# NetBox_MCP

./: .env.example  .gitignore  README.md  pyproject.toml
src/netbox_mcp_server/: server.py
